--- a/.github/workflows/cards.yml
+++ b/.github/workflows/cards.yml
@@ -19,7 +19,7 @@ jobs:
         uses: soulteary/github-readme-stats-action@v1.0.0
         with:
           card: stats
-          options: 'username=TavstalDev&show_icons=true&theme=tokyonight&hide_border=false&include_all_commits=true&count_private=true'
+          options: 'username=TavstalDev&theme=tokyonight&show_icons=true&hide_border=false&include_all_commits=true&count_private=true'
           path: profile/stats.svg
           token: ${{ secrets.GH_STATS }}
 
@@ -27,16 +27,15 @@ jobs:
         uses: soulteary/github-readme-stats-action@v1.0.0
         with:
           card: top-langs
-          options: 'username=TavstalDev&count_private=true&exclude_repo=Redstoneplugins,Unturfield&hide=ShaderLab,HLSL&layout=compact&theme=tokyonight&langs_count=10'
+          options: 'username=TavstalDev&theme=tokyonight&count_private=true&exclude_repo=Redstoneplugins,Unturfield&hide=ShaderLab,HLSL&layout=compact&langs_count=10'
           path: profile/top-langs.svg
           token: ${{ secrets.GH_STATS }}
           
-      - name: Generate wakatime card
-        uses: soulteary/github-readme-stats-action@v1.0.0
+      - name: Generate trophy card
+        uses: soulteary/github-profile-trophy-action@v1.0.0
         with:
-          card: wakatime
-          options: 'username=TavstalDev&theme=tokyonight&langs_count=10'
-          path: profile/wakatime.svg
+          options: 'username=TavstalDev&theme=tokyonight&column=7&margin-w=15&margin-h=15&title=AllSuperRank,MultiLanguage,Stars,Commits,Follower,Issues,PullRequest&show_icons=true'
+          path: .github/profile/trophy.svg
           token: ${{ secrets.GH_STATS }}
 
       - name: Commit cards
