--- a/.github/workflows/cards.yml
+++ b/.github/workflows/cards.yml
@@ -35,7 +35,7 @@ jobs:
         uses: soulteary/github-profile-trophy-action@v1.0.0
         with:
           options: 'username=TavstalDev&theme=tokyonight&column=7&margin-w=15&margin-h=15&title=AllSuperRank,MultiLanguage,Stars,Commits,Follower,Issues,PullRequest&show_icons=true'
-          path: .github/profile/trophy.svg
+          path: profile/trophy.svg
           token: ${{ secrets.GH_STATS }}
 
       - name: Commit cards
